--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "semi": false,
   "singleQuote": true,
-  "space-before-function-paren":0
+  "space-before-function-paren":0,
+  "comma-spacing":0,
+  "key-spacing":0
 }
