--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "space-before-function-paren":0,
-  "comma-spacing":0,
-  "key-spacing":0
+    "semi": false,
+    "singleQuote": true,
+    "space-before-function-paren": 0,
+    "comma-spacing": 0,
+    "key-spacing": 0,
+    "indent": 0,
+    "no-unused-vars": 0
 }
