--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,9 @@
     "comma-spacing": 0,
     "key-spacing": 0,
     "indent": 0,
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "space-before-blocks": 0,
+    "space-infix-ops": 0,
+    "no-trailing-spaces": 0,
+    "eol-last":0
 }
