--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "comma-spacing": 0,
     "key-spacing": 0,
     "indent": 0,
-    "no-unused-vars": 0
+    "no-unused-vars": 0,
+    "vue/no-unused-vars": 0
 }
