--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,6 @@
     "space-before-blocks": 0,
     "space-infix-ops": 0,
     "no-trailing-spaces": 0,
-    "eol-last":0
+    "eol-last":0,
+    "space-in-parens":0
 }
