finished goods part

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "babel-plugin-component": "^1.1.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
+        "lodash": "^4.17.15",
         "vue-cli-plugin-element": "^1.0.1",
+        "vue-quill-editor": "^3.0.6",
         "vue-table-with-tree-grid": "^0.2.4",
         "vue-template-compiler": "^2.6.10"
     }
