--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@vue/eslint-config-standard": "^4.0.0",
         "babel-eslint": "^10.0.3",
         "babel-plugin-component": "^1.1.1",
+        "echarts": "^4.6.0",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
         "lodash": "^4.17.15",
